[gd_scene load_steps=2 format=3 uid="uid://jobsgrb5cnuj"]

[ext_resource type="Script" path="res://Socket/clientprototype.gd" id="1_y5b0t"]

[node name="ClientConnection" type="Node"]
script = ExtResource("1_y5b0t")

[node name="Button" type="Button" parent="."]
offset_left = 789.0
offset_top = 225.0
offset_right = 1383.0
offset_bottom = 356.0
text = "Attack"

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 792.0
offset_top = 80.0
offset_right = 1385.0
offset_bottom = 205.0
theme_override_font_sizes/font_size = 41
placeholder_text = "put in position"

[node name="Label" type="Label" parent="."]
offset_left = 806.0
offset_top = 14.0
offset_right = 1158.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 30
text = "Round"

[node name="Label2" type="Label" parent="."]
offset_left = 347.0
offset_top = 408.0
offset_right = 991.0
offset_bottom = 900.0
theme_override_font_sizes/font_size = 30
text = "Your attack:"

[node name="Label3" type="Label" parent="."]
offset_left = 1304.0
offset_top = 389.0
offset_right = 1943.0
offset_bottom = 962.0
theme_override_font_sizes/font_size = 30
text = "Your Boat:"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
